apps/forgero/overlays/nishir-tailnet/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git
  annotations:
    tailscale.com/hostname: git
    tailscale.com/proxy-class: forgero
    tailscale.com/tags: tag:git
spec:
  loadBalancerClass: tailscale
