apps/forgero/overlays/nishir-tailnet/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgero
  annotations:
    tailscale.com/proxy-class: forgero
    tailscale.com/tags: tag:web
spec:
  ingressClassName: tailscale
